Refactor terminal logic: replace `sb.length()` checks with `sb.isEmpty()`, centralize `XTVERSION` constants, improve Konsole handling for RGB colors, and remove unused methods.